# fs-bom-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.toml
src/: main.py  taskmanager.py
src/clickup/: client.py  taskmanager.py
src/config_loader/: confighandler.py  fsconfig.py
src/fsg/: automator.py  cost_dataformat.py  dataformat.py  part_dataformat.py
src/fsg-bom-tool/: automator.py
src/logger/: fslogger.py
